Type changes and POST request
