# src/routes/recipes/recipes.routes.ts
@@ -1,6 +1,7 @@
 import { Request, Response, Router } from 'express';
 import { handleError } from '@root/utils/handleError';
 import { IRecipeService, RecipeService } from '@root/domains/recipes';
+import { RecipeBody } from './types';
 
 export const recipesRoutes = () => {
   const router = Router();
@@ -10,6 +11,8 @@ export const recipesRoutes = () => {
    * @swagger
    * /recipes:
    *  get:
+   *    tags:
+   *      - Recipe
    *    summary: Get recipes based on search
    *    description: "Get recipes based on parameters"
    *    parameters:
@@ -52,6 +55,8 @@ export const recipesRoutes = () => {
    * @swagger
    * /recipes/{id}:
    *  get:
+   *    tags:
+   *      - Recipe
    *    summary: Get a single recipe based on id
    *    description: "Fetch a recipe from database with a parameter of id"
    *    parameters:
@@ -72,6 +77,39 @@ export const recipesRoutes = () => {
     async (req: Request, res: Response) => {
       try {
         const recipe = await recipeService.searchById(parseInt(req.params.id, 10));
+        return res.status(200).send(recipe);
+      } catch (e) {
+        return handleError(e, res);
+      }
+    },
+  );
+
+  /**
+   * @swagger
+   * /recipes:
+   *  post:
+   *    tags:
+   *      - Recipe
+   *    summary: Add a recipe to database
+   *    description: "Reigster a new recipe to database"
+   *    requestBody:
+   *      content:
+   *        $ref: '#/components/requestBodies/RecipeBody'
+   *    responses:
+   *      200:
+   *        $ref: '#/components/responses/RecipeReponse'
+   *      400:
+   *        $ref: '#/components/responses/BadRequestError'
+   *      409:
+   *        $ref: '#/components/responses/UnauthorizedError'
+   *
+   */
+
+  router.post(
+    '/',
+    async (req: Request<null, null, RecipeBody>, res: Response) => {
+      try {
+        const recipe = await recipeService.addRecipe(req.body);
         return res.status(200).send(recipe);
       } catch (e) {
         return handleError(e, res);
