# src/routes/recipes/types.ts
@@ -1,7 +1,8 @@
-import { IRecipeToIngredient } from '@root/entities';
-
 export type RecipeBody = {
   name: string;
   uploadedBy: number;
-  ingredients: IRecipeToIngredient[];
+  ingredients: {
+    id: number,
+    quantity: number
+  }[];
 };
