# swagger/requestBodies.yml
@@ -78,3 +78,36 @@ components:
               description: the Id of the machine
               example: 123456
               format: number
+    RecipeBody:
+      application/json:
+        schema:
+          type: object
+          properties:
+            name:
+              type: string
+              required: true
+              description: The name of Recipe
+              example: Mojito
+              format: string
+            uploadedBy:
+              type: number
+              required: true
+              description: The id of user
+              example: 1
+              format: number
+            ingredients:
+              type: array
+              items: 
+                type: object
+                properties:
+                  ingredientId:
+                    type: integer
+                    description: The ID of the ingredient
+                    example: 1
+                    format: number
+                  quantity:
+                    type: number
+                    nullable: true
+                    description: The quantity of the ingredient required for the recipe
+                    example: 1
+                    format: number
